services/obsidian-sync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: obsidian-sync
spec:
  selector:
    app: couchdb
  ports:
    - name: couchdb
      protocol: TCP
      port: 5984
      targetPort: 5984
